[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GUI/PauseMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MainContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer"]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer/HBoxContainer"]
margin_left = 477.0
margin_right = 546.0
margin_bottom = 600.0
custom_constants/separation = 25
alignment = 1

[node name="Continue" type="Button" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 69.0
margin_bottom = 265.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_top = 290.0
margin_right = 69.0
margin_bottom = 310.0
text = "Options"

[node name="Exit" type="Button" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 69.0
margin_bottom = 355.0
text = "Exit"
[connection signal="pressed" from="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
